fix main scrollbar on chrome

--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,7 @@ body {
   // Body should have background to scrollbar otherwise it will use white (body color?)
   html {
     scrollbar-color: var(--selectedMenu) var(--wallpaper);
+    background: var(--wallpaper);
   }
 }
 
